2001-05-21  Marius Vollmer  <mvo@zagadka.ping.de>

	* test/goops.test, test/syncase.test: New, minimal tests.

2001-05-19  Marius Vollmer  <mvo@zagadka.ping.de>

	* tests/version.test: Updated test for new micro version stuff.

2001-05-16  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* tests/srfi-13.test: More tests.

2001-05-10  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* tests/srfi-10.test: New file.

	* tests/srfi-9.test: New file.

	* tests/srfi-13.test: Added some more tests.

2001-05-09  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* tests/eval.test: ("evaluator" "memoization"): New test
	prefix block.
	("transparency"): New "evaluator memoization" test.

2001-05-08  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* tests/srfi-13.test: Added module access kludge, and uncommented
	some tests depending on this.

2001-05-07  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* tests/srfi-13.test: New file testing the SRFI string library.

2001-04-26  Gary Houston  <ghouston@arglist.com>

	* tests/r4rs.test: delete files tmp1, tmp2, tmp3 after the tests
	have run.

	* tests/ports.test (test-file), tests/load.test (temp-dir):
	redefined using data-file-name instead of tmpnam.  the test files
	will be created in the build directory instead of /var/tmp or
	whereever tmpnam puts them.

2001-04-02  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/symbols.c:  Added some tests.

2001-03-19  Gary Houston  <ghouston@arglist.com>

	* tests/r4rs.test: use test-file-name to locate r4rs.test,
	not data-file-name.

	* guile-test: define tmp-dir, the location where r4rs.test will
	create it's temporary files.
	(data-file-name): use tmp-dir.  this must be under build-dir,
	not src-dir.

2001-03-18  Gary Houston  <ghouston@arglist.com>

	* guile-test: use #!/bogus-path/..., not #!/home/dirk/... in the
	first line.

2001-03-12  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/syntax.test:  Added a test for let* bindings and
	re-arranged and slightly improved the existing one.
