@@ -1,3 +1,8 @@
+2001-05-28  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>
+
+	* tests/symbols.test ("gensym"): New tests for long gensym
+	prefices and embedded NULs in prefices.
+
 2001-05-21  Marius Vollmer  <mvo@zagadka.ping.de>
 
 	* test/goops.test, test/syncase.test: New, minimal tests.
